--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -32,5 +32,7 @@ jobs:
       - run: deno bundle main.tsx main.js
       - uses: actions/configure-pages@v1
       - uses: actions/upload-pages-artifact@v1
+        with:
+          path: './'
       - uses: actions/deploy-pages@main
         id: deployment
