--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,6 +22,7 @@ jobs:
           # extended: true
 
       - name: Build
+        run: cd trevortomlinblog/
         run: hugo --minify
 
       - name: Deploy
