--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
           # extended: true
           
       - name: Build
-        run: cd trevortomlinblog/ | hugo --minify
+        run: ls | hugo --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
