--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,8 @@ jobs:
           # extended: true
           
       - name: Build
-        run: ls | hugo --minify
+        working-directory: ./trevortomlinblog/
+        run: hugo --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
