--- a/trevortomlinblog/config.toml
+++ b/trevortomlinblog/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://trevortomlin.github.io/'
+baseURL = 'http://www.trevortomlin.com/'
 languageCode = 'en-us'
 title = "Trevor's Blog"
 theme = 'terminal'
